Add stable section labels
This change just adds stable section labels similar to the ISO C++ standard. As C++ discovered, stable identifiers make it easy to coorelate across versions of the standard as it evolves.

--- a/specs/language/hlsl.tex
+++ b/specs/language/hlsl.tex
@@ -15,6 +15,10 @@
 
 \renewcommand{\familydefault}{\sfdefault}
 
+\newcommand{\Ch}[2]{\chapter[#1]{#1\hfill[#2]}\label{#2}}
+\newcommand{\Sec}[2]{\section[#1]{#1\hfill[#2]}\label{#2}}
+\newcommand{\Sub}[2]{\subsection[#1]{#1\hfill[#2]}\label{#2}}
+
 \input{glossary}
 
 \title{High-Level Shader Language Specification\\
