--- a/specs/language/introduction.tex
+++ b/specs/language/introduction.tex
@@ -56,7 +56,8 @@ chapter, and the attached \ref{glossaries}.
 
 \Sec{Runtime Targeting}{Intro.Runtime}
 
-\p \acrshort{hlsl} evolved out of \gls{dx} and gained popularity because it
+\p \acrshort{hlsl} emerged from the evolution of \gls{dx} to grant greater
+control over GPU geometry and color processing. It gained popularity because it
 targeted a common hardware description which all conforming drivers were
 required to support. This common hardware description, called a \gls{sm}, is an
 integral part of the description for \acrshort{hlsl} . Some \acrshort{hlsl}
