Fleshing out Execution and Memory models
This update Intro.Defs earlier in the introduction and puts more detail
into the SPMD programming model and memory model.

--- a/specs/language/glossary.tex
+++ b/specs/language/glossary.tex
@@ -8,6 +8,7 @@
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{spmd}{SPMD}{Single Program Multiple Data}
 \newacronym{simd}{SIMD}{Single Instruction Multiple Data}
+\newacronym{simt}{SIMT}{Single Instruction Multiple Thread}
 
 \newglossaryentry{spirv}
 {
