--- a/specs/language/conversions.tex
+++ b/specs/language/conversions.tex
@@ -2,16 +2,21 @@
 
 \p \acrshort{hlsl} inherits standard conversions similar to \gls{isoCPP}. This
 chapter enumerates the full set of conversions. A \textit{standard conversion
-sequence} is a sequence of standard conversions in the following order:
+sequence} is a sequence of standard conversions in the following
+order:
 \begin{enumerate}
   \item Zero or one conversion of either lvalue-to-rvalue, array-to-pointer or
   function-to-pointer.
   \item Zero or one conversion of either integral conversion, floating point
   conversion, floating point-integral conversion, or boolean conversion,
-  derived-to-base-lvalue, vector splat, vector truncation, or flat conversion.
+  derived-to-base-lvalue, vector splat, vector truncation, or flat
+  conversion\footnote{This differs from C++ with the addition of
+  vector splat and truncation casting and flat conversions.}.
   \item Zero or one conversion of either component-wise integral conversion,
   component-wise floating point conversion, component-wise floating
-  point-integral conversion, or component-wise boolean conversion.
+  point-integral conversion, or component-wise boolean
+  conversion\footnote{C++ does not support this conversion in the sequence for
+  component-wise conversion of vector and matrix types.}.
   \item Zero or one qualification conversion.
 \end{enumerate}
 
