Basic lexing for preprocessor tokens
This change adds some macros to format grammar definitions similar to
how the C++ standard does. It then uses the new macros in the new lexing
sections for:

* Character Sets
* Preprocessing Tokens
* Tokens
* Comments
* Header Names

This is all extremely consistent with C/C++ circa 2011. The deviations
will start in the next sections.

--- a/specs/language/hlsl.tex
+++ b/specs/language/hlsl.tex
@@ -8,6 +8,7 @@
 \usepackage{marginnote}
 \usepackage{parskip}
 \usepackage{titlesec}
+\usepackage{enumitem}
 
 \titleformat{\chapter}
   {\LARGE\bfseries}{\thechapter}{10pt}{}
@@ -60,6 +61,8 @@
 }{}
 
 \begin{document}
+\input{macros} 
+
 \maketitle
 
 \tableofcontents
