Add table of contents sidebar and links to HLSL spec (hyperref)

--- a/specs/language/hlsl.tex
+++ b/specs/language/hlsl.tex
@@ -9,6 +9,7 @@
 \usepackage{parskip}
 \usepackage{titlesec}
 \usepackage{enumitem}
+\usepackage[hidelinks]{hyperref}
 
 \titleformat{\chapter}
   {\LARGE\bfseries}{\thechapter}{10pt}{}
