Add Acronym and Glossary to TOC; fix Glossary reference in Introduction. (#130)
* Add Acronym and Glossary to TOC; fix Glossary reference in introduction.

* Fix wording.

--- a/specs/language/introduction.tex
+++ b/specs/language/introduction.tex
@@ -51,8 +51,8 @@ document and should be used in conjunction with interpreting this standard.
 
 \p This document aims to use terms consistent with their definitions in
 \gls{isoC} and \gls{isoCPP}. In cases where the definitions are unclear, or
-where this document diverges this section, the remaining sections in this
-chapter, and the attached \ref{glossaries}.
+where this document diverges, refer to the remaining sections in this
+chapter and the attached \nameref{main}.
 
 \Sec{Runtime Targeting}{Intro.Runtime}
 
