--- a/proposals/0020-hlsl-202x-202y.md
+++ b/proposals/0020-hlsl-202x-202y.md
@@ -2,7 +2,7 @@
 
 # HLSL 202x and 202y
 
-* Proposal: [INF-NNNN](NNNN-hlsl-202x-202y.md)
+* Proposal: [0020](0020-hlsl-202x-202y.md)
 * Author(s): [Chris Bieneman](https://github.com/llvm-beanz)
 * Sponsor: [Chris Bieneman](https://github.com/llvm-beanz)
 * Status: **Under Consideration**
