[Language] Begin Basic.types
This begins drafting the Basic.types section which specifies the
foundations of HLSL's data types. This includes some basic information
about representations as well as the classifications of types and the
basic behaviors of some types.

--- a/specs/language/glossary.tex
+++ b/specs/language/glossary.tex
@@ -30,10 +30,22 @@
   description={ISO C standard}
 }
 
+\newglossaryentry{isoC23}
+{
+  name={ISO/IEC 9899:2023},
+  description={ISO C23 standard}
+}
+
 \newglossaryentry{isoCPP}
 {
   name={ISO/IEC 14882:2020},
   description={ISO C++ standard}
+}
+
+\newglossaryentry{IEEE754}
+{
+  name={IEEE Standard 754},
+  description={IEEE Standard For Floating Point Arithmetic}
 }
 
 \newglossaryentry{sm}
