--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -1,5 +1,97 @@
 \Ch{Basic Concepts}{Basic}
 
+\Sec{Types}{Basic.types}
+
+\p The \textit{object representation} of an object of type \texttt{T} is the
+sequence of \textit{N} bytes taken up by the object of type \texttt{T}, where
+\textit{N} equals \texttt{sizeof(T)}\footnote{\texttt{sizeof(T)}, returns the
+size of an object of type \texttt{T} in bytes as stored in device memory.
+The size may be different in other memory spaces and no operator exists to query
+it.}. The \textit{object representation} of an object may be different based on
+the \textit{memory space} it is stored in (\ref{Intro.Memory.Spaces}).
+
+\p The \textit{value representation} of an object is the set of bits that hold
+the value of type \texttt{T}.
+
+\p An \textit{object type} \texttt{T} is an \textit{incomplete type} if the
+compiler lacks sufficient information to determine the size of an object of type
+\texttt{T}, and a \textit{complete type} if the compiler has sufficient
+information to determine the size of an object of type \texttt{T}. An object may
+not be defined to have an \textit{incomplete} type.
+
+\p A \textit{class type} is a data type declared with either the \texttt{class}
+or \texttt{struct} keywords (\ref{Classes}). A class type \texttt{T} may be
+declared as incomplete at one point in a translation unit via a \textit{forward
+declaration}, and complete later with a full definition. The type \texttt{T} is
+the same type throughout the translation unit.
+
+\p An \textit{object type} is a type that is not a function type, not a
+reference type, and not a void type.
+
+\p Arithmetic types (\ref{Basic.types.arithmetic}), enumeration types, and
+\textit{cv-qualified} versions of these types are collectively called
+\textit{scalar types}.
+
+\p Vectors of scalar types declared with the built-in \texttt{vector<T,N>}
+template are \textit{vector types}.
+
+\p \textit{POD types}\footnote{POD is an initialism for Plain-Old-Data which is
+referenced in the C++ specification but never expanded.} are POD class types,
+scalar types, vector types, and arrays of such types. \textit{POD class types}
+are class types that only contain members POD types.
+
+\Sub{Arithmetic Types}{Basic.types.arithmetic}
+
+\p There are three \textit{standard signed integer types}: \texttt{int16\_t},
+\texttt{int32\_t}, and \texttt{int64\_t}. Each of the signed integer types is
+explicitly named for the size in bits of the type's object representation. There
+is also the type alias \texttt{int} which is an alias of \texttt{int32\_t}. The
+standard signed integer types are collectively called \textit{signed integer
+types}.
+
+\p There are three \textit{standard unsigned integer types}: \texttt{uint16\_t},
+\texttt{uint32\_t}, and \texttt{uint64\_t}. Each of the unsigned integer types is
+explicitly named for the size in bits of the type's object representation. There
+is also the type alias \texttt{uint} which is an alias of \texttt{uint32\_t}. The
+standard unsigned integer types are collectively called \textit{unsigned integer
+types}\footnote{HLSL does not inherit C's default type rule, nor does it
+inherit the \texttt{unsigned} keyword.}.
+
+\p The signed integer types and unsigned integer types are collectively called
+\textit{integer types}. Integer types inherit the object representation of
+integers defined in \glsdesc{isoC23}\footnote{C23 adopts two's compliment as the
+object representation for integer types.}. Integer types shall satisfy the
+constraints defined in \glsdesc{isoCPP}, section \textbf{basic.fundamental}.
+
+\p There are three \textit{floating point types}: \texttt{half}, \texttt{float},
+and \texttt{double}. The \texttt{float} type is a 32-bit floating point type.
+The \texttt{double} type is a 64-bit floating point type. Both the
+\texttt{float} and \texttt{double} types have object representations as defined
+in \gls{IEEE754}. The \texttt{half} type may be either 16-bit or 32-bit as
+controlled by implementation defined compiler settings. If \texttt{half} is
+32-bit it will have an object representation as defined in \gls{IEEE754},
+otherwise it will have an object representation matching the \textbf{binary16}
+format defined in \gls{IEEE754}\footnote{IEEE-754 only defines a binary encoding
+for 16-bit floating point values, it does not fully specify the behavior of such
+types.}.
+
+\p Integer and floating point types are collectively called \textit{arithmetic
+types}.
+
+\p The \texttt{void} type is inherited from \gls{isoCPP}, which defines it as
+having an empty set of values and being an incomplete type that can never be
+completed. The \texttt{void} type is used to signify the return type of a
+function that returns no value. Any expression can be explicitly converted to
+\texttt{void}.
+
+\Sub{Special Classes}{Basic.types.special}
+
+\p A class type may be an \textit{ordinary class} or a \textit{special class}.
+An ordinary class is a class type that contains no members of special class,
+array of special class, or cv-qualified versions of these types. Special class
+objects can only exist in thread memory: they cannot be stored to any other
+memory space (\ref{Intro.Memory.Spaces}).
+
 \Sec{Lvalues and rvalues}{Basic.lval}
 
 \p Expressions are classified by the type(s) of values they produce. The valid
