--- a/specs/language/hlsl.tex
+++ b/specs/language/hlsl.tex
@@ -35,11 +35,11 @@
 \newenvironment{note}
     {\begin{center}
     \begin{tabular}{|p{0.9\textwidth}|}
-    \hline\\ 
+    \hline\\
     }
-    { 
+    {
     \\\\\hline
-    \end{tabular} 
+    \end{tabular}
     \end{center}
     }
 
@@ -77,7 +77,7 @@
 \newcommand{\Par}[2]{\paragraph[#1]{#1\hfill[#2]\\}\label{#2}\p}
 
 \begin{document}
-\input{macros} 
+\input{macros}
 
 \maketitle
 
@@ -88,6 +88,7 @@
 \input{basic}
 \input{conversions}
 \input{expressions}
+\input{classes}
 
 \input{placeholders} % Declare placeholder references
 
