--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -1,7 +1,11 @@
 \Ch{Declarations}{Decl}
+\Sec{Specifiers}{Decl.Specifier}
+\Sec{Type Specifiers}{Decl.Specifier.Type}
+\Sec{Elaborated Type Specifiers}{Decl.Specifier.Type.Elab}
 \Sec{Function Definitions}{Decl.Function}
 \Sec{Attributes}{Decl.Attr}
 \Sub{Entry Attributes}{Decl.Attr.Entry}
-\Ch{Classes}{Classes}
+%\Ch{Classes}{Classes} - leaving this as a comment to instruct where Decl fits
+%in the ordering of chapters.
 \Ch{Overloading}{Overload}
 \Ch{Runtime}{Runtime}
