Trying this a different way.
I think describing intangible types as the foundational bits (handles,
min-precision values, etc) and walking up from there makes more sense.
Then Resource types inherit being intangible.

--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -1,11 +1,7 @@
 \Ch{Declarations}{Decl}
-\Sec{Specifiers}{Decl.Specifier}
-\Sec{Type Specifiers}{Decl.Specifier.Type}
-\Sec{Elaborated Type Specifiers}{Decl.Specifier.Type.Elab}
 \Sec{Function Definitions}{Decl.Function}
 \Sec{Attributes}{Decl.Attr}
 \Sub{Entry Attributes}{Decl.Attr.Entry}
-%\Ch{Classes}{Classes} - leaving this as a comment to instruct where Decl fits
-%in the ordering of chapters.
+\Ch{Classes}{Classes}
 \Ch{Overloading}{Overload}
 \Ch{Runtime}{Runtime}
