--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -14,11 +14,8 @@ it is stored in (\ref{Intro.Memory.Spaces}).
 the value of type \texttt{T}. Bits in the object representation that are not
 part of the value representation are \textit{padding bits}.
 
-\p An \textit{object type} \texttt{T} is an \textit{incomplete type} if the
-compiler lacks sufficient information to determine the size of an object of type
-\texttt{T}, and a \textit{complete type} if the compiler has sufficient
-information to determine the size of an object of type \texttt{T}. An object may
-not be defined to have an \textit{incomplete} type.
+\p An \textit{object type} is a type that is not a function type, not a
+reference type, and not a void type.
 
 \p A \textit{class type} is a data type declared with either the \texttt{class}
 or \texttt{struct} keywords (\ref{Classes}). A class type \texttt{T} may be
@@ -26,8 +23,24 @@ declared as incomplete at one point in a translation unit via a \textit{forward
 declaration}, and complete later with a full definition. The type \texttt{T} is
 the same type throughout the translation unit.
 
-\p An \textit{object type} is a type that is not a function type, not a
-reference type, and not a void type.
+\p There are two special implementation-defined types: \textit{handle types},
+and \textit{minimum precision types}. These types are collectively called
+\textit{standard intangible types}. Intangible types are types that have no
+defined object representation or value representation, as such the size is
+unknown at compile time.
+% Note: The above definition is likely incomplete, and it is unclear if minimum
+% precision types should be intangible.
+
+\p A class type \texttt{T} is an \textit{intangible class type} if it contains
+an base classes or members of intangible class type, standard intangible type,
+or arrays of such types. Standard intangible types and intangible class types
+are collectively called \textit{intangible types}.
+
+\p An object type is an \textit{incomplete type} if the
+compiler lacks sufficient information to determine the size of an object of type
+\texttt{T}, and a \textit{complete type} if the compiler has sufficient
+information to determine the size of an object of type \texttt{T}. An object may
+not be defined to have an \textit{incomplete} type.
 
 \p Arithmetic types (\ref{Basic.types.arithmetic}), enumeration types, and
 \textit{cv-qualified} versions of these types are collectively called
@@ -41,16 +54,26 @@ template are \textit{vector types}.
 \p There are three \textit{standard signed integer types}: \texttt{int16\_t},
 \texttt{int32\_t}, and \texttt{int64\_t}. Each of the signed integer types is
 explicitly named for the size in bits of the type's object representation. There
-is also the type alias \texttt{int} which is an alias of \texttt{int32\_t}. The
-standard signed integer types are collectively called \textit{signed integer
-types}.
+is also the type alias \texttt{int} which is an alias of \texttt{int32\_t}.
+There are three \textit{minimum precision signed integer types}:
+\texttt{min10int}, \texttt{min12int}, and \texttt{min16int}. Each of the minimum
+precision signed integer types are intangible types named for the required
+minimum type size in bits. The object and value representations are
+implementation defined, but shall not exceed the size of \texttt{int}. The
+standard signed integer types and minimum precision signed integer types are
+collectively called \textit{signed integer types}.
 
 \p There are three \textit{standard unsigned integer types}: \texttt{uint16\_t},
-\texttt{uint32\_t}, and \texttt{uint64\_t}. Each of the unsigned integer types is
-explicitly named for the size in bits of the type's object representation. There
-is also the type alias \texttt{uint} which is an alias of \texttt{uint32\_t}. The
-standard unsigned integer types are collectively called \textit{unsigned integer
-types}.
+\texttt{uint32\_t}, and \texttt{uint64\_t}. Each of the unsigned integer types
+is explicitly named for the size in bits of the type's object representation.
+There is also the type alias \texttt{uint} which is an alias of
+\texttt{uint32\_t}. There are three \textit{minimum precision unsigned integer
+types}: \texttt{min10uint}, \texttt{min12uint}, and \texttt{min16uint}. Each of
+the minimum precision unsigned integer types are intangible types named for the
+required minimum type size in bits. The object and value representations are
+implementation defined, but shall not exceed the size of \texttt{uint}. The
+standard unsigned integer types and minimum precision unsigned integer types are
+collectively called \textit{unsigned integer types}.
 
 \p The signed integer types and unsigned integer types are collectively called
 \textit{integer types}. Integer types inherit the object representation of
@@ -58,17 +81,23 @@ integers defined in \glsdesc{isoC23}\footnote{C23 adopts two's compliment as the
 object representation for integer types.}. Integer types shall satisfy the
 constraints defined in \glsdesc{isoCPP}, section \textbf{basic.fundamental}.
 
-\p There are three \textit{floating point types}: \texttt{half}, \texttt{float},
-and \texttt{double}. The \texttt{float} type is a 32-bit floating point type.
-The \texttt{double} type is a 64-bit floating point type. Both the
-\texttt{float} and \texttt{double} types have object representations as defined
-in \gls{IEEE754}. The \texttt{half} type may be either 16-bit or 32-bit as
-controlled by implementation defined compiler settings. If \texttt{half} is
+\p There are three \textit{standard floating point types}: \texttt{half},
+\texttt{float}, and \texttt{double}. The \texttt{float} type is a 32-bit
+floating point type. The \texttt{double} type is a 64-bit floating point type.
+Both the \texttt{float} and \texttt{double} types have object representations as
+defined in \gls{IEEE754}. The \texttt{half} type may be either 16-bit or 32-bit
+as controlled by implementation defined compiler settings. If \texttt{half} is
 32-bit it will have an object representation as defined in \gls{IEEE754},
 otherwise it will have an object representation matching the \textbf{binary16}
 format defined in \gls{IEEE754}\footnote{IEEE-754 only defines a binary encoding
 for 16-bit floating point values, it does not fully specify the behavior of such
-types.}.
+types.}. There are three \textit{minimum precision floating point types}:
+\texttt{min10float}, \texttt{min12float}, and \texttt{min16float}. Each of the
+minimum precision floating point types are intangible types named for the
+required minimum size in bits. The object and value representations are
+implementation defined, but shall not exceed the size of \texttt{float}. The
+standard floating point types and minimum precision floating point types are
+collectively called \textit{floating point types}.
 
 \p Integer and floating point types are collectively called \textit{arithmetic
 types}.
