--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -4,4 +4,5 @@
 \Sub{Entry Attributes}{Decl.Attr.Entry}
 \Ch{Classes}{Classes}
 \Ch{Overloading}{Overload}
+\Ch{Intangible Types}{Intangible}
 \Ch{Runtime}{Runtime}
