Fixing spelling typo (Thanks @coopp)

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -4,9 +4,9 @@
 
 \p The \textit{object representation} of an object of type \texttt{T} is the
 sequence of \textit{N} bytes taken up by the object of type \texttt{T}, where
-\textit{N} equals \texttt{sizeof(T)}\footnote{\texttt{sizeof(T)}eturns the size
-of the struct as-if it's stored in device memory, and determining the size if
-it's stored in another memory space is not possible.}. The \textit{object
+\textit{N} equals \texttt{sizeof(T)}\footnote{\texttt{sizeof(T)} returns the
+size of the object as-if it's stored in device memory, and determining the size
+if it's stored in another memory space is not possible.}. The \textit{object
 representation} of an object may be different based on the \textit{memory space}
 it is stored in (\ref{Intro.Memory.Spaces}).
 
