Add vector size limitation to spec

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -47,7 +47,8 @@ be defined to have an \textit{incomplete} type.
 \textit{scalar types}.
 
 \p Vectors of scalar types declared with the built-in \texttt{vector<T,N>}
-template are \textit{vector types}.
+template are \textit{vector types}. Vector lengths must be between 1 and 4 (i.e.
+\( 1 \leq N \leq 4 \) ).
 
 \Sub{Arithmetic Types}{Basic.types.arithmetic}
 
