--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -2,5 +2,7 @@
 \Sec{Function Definitions}{Decl.Function}
 \Sec{Attributes}{Decl.Attr}
 \Sub{Entry Attributes}{Decl.Attr.Entry}
+\Ch{Classes}{Classes}
 \Ch{Overloading}{Overload}
+\Ch{Intangible Types}{Intangible}
 \Ch{Runtime}{Runtime}
